Cards border collapse fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,40 +122,34 @@ img {
 .card {
     border-radius: 0.938rem;
     padding: 2.375rem 0 0;
-    background-repeat: no-repeat;
-    background-position: top -0.682rem right 1.089rem;
-    background-size: 78px;
+    background-repeat: no-repeat, no-repeat;
+    background-position: top -0.682rem right 1.089rem, center center;
+    background-size: 78px, 100%;
 }
 
 .card.work {
-    background-color: var(--lightRed);
-    background-image: url(../img/icon-work.svg);
+    background-image: url(../img/icon-work.svg), linear-gradient(to bottom, var(--lightRed) 0%, var(--lightRed) 50%, var(--darkBlue) 50%, var(--darkBlue) 100%);
 }
 
 .card.play {
-    background-color: var(--softBlue);
-    background-image: url(../img/icon-play.svg);
+    background-image: url(../img/icon-play.svg), linear-gradient(to bottom, var(--softBlue) 0%, var(--softBlue) 50%, var(--darkBlue) 50%, var(--darkBlue) 100%);
 }
 
 .card.study {
-    background-color: var(--lightRedTwo);
-    background-image: url(../img/icon-study.svg);
+    background-image: url(../img/icon-study.svg), linear-gradient(to bottom, var(--lightRedTwo) 0%, var(--lightRedTwo) 50%, var(--darkBlue) 50%, var(--darkBlue) 100%);
 }
 
 .card.exercise {
-    background-color: var(--limeGreen);
-    background-image: url(../img/icon-exercise.svg);
-    background-position: top 0.026rem right 1.089rem;
+    background-position: top 0.026rem right 1.089rem, center;
+    background-image: url(../img/icon-exercise.svg), linear-gradient(to bottom, var(--limeGreen) 0%, var(--limeGreen) 50%, var(--darkBlue) 50%, var(--darkBlue) 100%);
 }
 
 .card.social {
-    background-color: var(--violet);
-    background-image: url(../img/icon-social.svg);
+    background-image: url(../img/icon-social.svg), linear-gradient(to bottom, var(--violet) 0%, var(--violet) 50%, var(--darkBlue) 50%, var(--darkBlue) 100%);
 }
 
 .card.self-care {
-    background-color: var(--softOrange);
-    background-image: url(../img/icon-self-care.svg);
+    background-image: url(../img/icon-self-care.svg), linear-gradient(to bottom, var(--softOrange) 0%, var(--softOrange) 50%, var(--darkBlue) 50%, var(--darkBlue) 100%);
 }
 
 .card-data {
